--- a/python-note/sequence.org
+++ b/python-note/sequence.org
@@ -14,7 +14,8 @@
 * LIST(顺序变长容器)
 ** operation
 *** x in s
-    如果 s 中某项和 x 相等，返回 True, 否则返回 False
+    - 如果 s 中某项和 x 相等，返回 True, 否则返回 False
+    - 示例
     #+BEGIN_SRC python
     s = [1, 2, 3, 4]
     x = 1
