--- a/python-note/sequence.org
+++ b/python-note/sequence.org
@@ -1,4 +1,3 @@
-* 方便理解切片和索引
 #+BEGIN_SRC 
  +---+---+---+---+---+---+
  | P | y | t | h | o | n |
@@ -7,12 +6,11 @@
 -6  -5  -4  -3  -2  -1      slice position
    0   1   2   3   4   5    index position
 #+END_SRC
-* 约定
-  - s , t :: 同类型序列
-  - n, i, j, k :: 整数
-  - x :: 满足 s 限制的任意对象
-* LIST(顺序变长容器)
-** operation
+** 约定
+   - s , t :: 同类型序列
+   - n, i, j, k :: 整数
+   - x :: 满足 s 限制的任意对象
+** 通用序列操作
 *** x in s
     如果 s 中某项和 x 相等，返回 True, 否则返回 False
     #+BEGIN_SRC python
@@ -35,7 +33,7 @@
       t = [4, 5]
       result = s + t # result = [1, 2, 3, 4, 5]
       #+END_SRC
-*** s * n 
+*** s * n
     等同于 n 个 s 相加 
     #+BEGIN_SRC python
     result = s * 2 == s + s # result = True
@@ -55,5 +53,14 @@
     #+END_SRC
 *** max(s)
     返回 s 中值最大的项
+    #+BEGIN_SRC python
+    s = [1, 2, 3, 4]
+    result = max(s) # result = 4
+    #+END_SRC
 *** min(s)
     返回 s 中值最小的项
+    #+BEGIN_SRC python
+    s = [1, 2, 3, 4]
+    result = min(s) # result = 1
+    #+END_SRC
+** LIST(顺序变长容器) 
