--- a/python-note/sequence.org
+++ b/python-note/sequence.org
@@ -93,4 +93,11 @@
     s.insert(-1, 1) # s = [1, 1, 2, 3, 1, 4]
     s[0:0]=[0] # s = [0, 1, 1, 2, 3, 1, 4]
     #+END_SRC
+*** s.pop([i])
+    取得 i (index position) 处的项，并将其从 s 中移除, i 为可选参数，默认等于 -1
+    #+BEGIN_SRC python
+    s = [1, 2, 3, 4]
+    result = s.pop(0) # s = [2, 3, 4], result = 1
+    result = s.pop() # s = [2, 3], result = 4
+    #+END_SRC
 
