--- a/python-note/sequence.org
+++ b/python-note/sequence.org
@@ -63,6 +63,18 @@
     s = [1, 2, 3, 4]
     result = min(s) # result = 1
     #+END_SRC
+*** s.index(x)
+    s 中第一个 x 的 index
+    #+BEGIN_SRC python
+    s = [1, 2, 1, 3, 4]
+    result = s.index(1) # result = 0
+    #+END_SRC
+*** s.count(x)
+    s 中 x 出现的次数
+    #+BEGIN_SRC python
+    s = [1, 2, 1, 3, 4]
+    result = s.index(1) # result = 2
+    #+END_SRC
 ** LIST(顺序可变容器) 
 *** s[i] = x 
     s 中索引为 i 的项被 x 取代
@@ -112,4 +124,3 @@
     t = [5, 6]
     s.extend(t) # s = [1, 2, 3, 4, 5, 6]
     #+END_SRC
-
